<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pref="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onboard_container"
            style="@style/Card">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/onboard_title"
                android:text="@string/onboard_general_title"
                style="@style/ListItemTitle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/onboard_title"
                android:id="@+id/onboard_description_1"
                android:text="@string/onboard_general_description1"
                android:paddingBottom="2dp"
                style="@style/ListItemDescription"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/onboard_description_1"
                android:id="@+id/onboard_description_2"
                android:text="@string/onboard_general_description2"
                style="@style/ListItemDescription"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/onboard_description_2"
                android:layout_toStartOf="@+id/ok_button"
                android:layout_alignParentBottom="true"
                android:id="@+id/help_button"
                android:text="@string/generic_help"
                style="@style/Button.Flat.Dialog"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/onboard_description_2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/ok_button"
                android:text="@string/generic_understood"
                style="@style/Button.Flat.Dialog"/>
        </RelativeLayout>

        <com.beatonma.ledcontrol.app.ui.EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pref:name="@string/pref_remote_address"
            pref:description="@string/pref_remote_address_description"
            pref:key="pref_remote_address"
            pref:hint="@string/pref_remote_address_hint"/>

        <com.beatonma.ledcontrol.app.ui.SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/switch_interpolate_changes"
            pref:name="@string/pref_interpolate_color_changes"
            pref:key="pref_interpolate_color_changes"
            pref:description="@string/pref_interpolate_color_changes_description"
            pref:checked="true"/>

        <com.beatonma.ledcontrol.app.ui.FloatSeekbarPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/color_change_duration"
            pref:title="@string/pref_color_change_duration"
            pref:key="pref_color_change_duration"
            pref:max_value="19"
            pref:min_value="0.5"
            pref:progress="2"
            pref:float_multiplier="0.5"
            pref:customListener="true"/>

        <com.beatonma.ledcontrol.app.ui.SeekbarPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/max_brightness"
            pref:title="@string/pref_max_brightness"
            pref:key="pref_max_brightness"
            pref:max_value="100"
            pref:progress="100"/>

        <com.beatonma.ledcontrol.app.ui.SeekbarPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/min_brightness"
            pref:title="@string/pref_min_brightness"
            pref:key="pref_min_brightness"
            pref:max_value="100"
            pref:progress="0"/>
    </LinearLayout>
</ScrollView>